# luau-analysis

./: .gitignore  Cargo.toml  README.md
asset-digger/: Cargo.toml
asset-digger/src/: digger.rs  lib.rs
commands/src/: exit.rs  handler.rs  lib.rs
luau-search/: Cargo.toml
luau-search/src/: lib.rs  luapage.rs  pointer.rs  regex.rs  regexblock.rs  search.rs
luau-sifter/: Cargo.toml
luau-sifter/src/: main.rs
mem-analysis/: Cargo.toml
mem-analysis/src/: buffer.rs  data_interface.rs  lib.rs  memory.rs  pointers.rs  radare.rs
scripts/: analyze_dumps.py
src/: lib.rs  main.rs  memory.rs  memrange.rs
