[package]
name = "mem-analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#minidump-stackwalk = {version = '0.15.2'}
minidump-processor = {version = '0.15.2'}
clap = {version = '4.1.8', features=["derive"]}
log = {version = "0.4"}
log4rs = {version = "1"}
md5 = {version = "0.7.0" }
regex = {version = '1.7.1'}
serde = { version = '1.0.156', features = ["derive"]}
serde_json = { version = '1.0.94'}
inquire = { version = "0.6.0", features = ["date"] }
